Update to Tomcat 9 + JDK 11