@@ -14,7 +14,7 @@ if [ -e "/srv/data/papyri.info/git/navigator/pn-dispatcher/target/dispatch.war" 
   if [ ! -e "/usr/local/tomcat/conf/server.xml.lock" ]; then
     sed -i -e 's/Connector port="8080"/Connector port="8080" URIEncoding="UTF-8"/' /usr/local/tomcat/conf/server.xml && touch /usr/local/tomcat/conf/server.xml.lock
   fi
-  JAVA_OPTS="-server -Xms1500m -Xmx8G -Xmn450m -XX:MaxPermSize=256m -verbose:gc -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+PrintHeapAtGC -XX:+UseConcMarkSweepGC -Dsolr.solr.home=/srv/data/papyri.info/solr" catalina.sh run
+  JAVA_OPTS="-server -Xms1500m -Xmx8G -Xmn450m -XX:MaxPermSize=256m -Dsolr.solr.home=/srv/data/papyri.info/solr" catalina.sh run
   exit 0
 else
   echo "dispatch.war missing"
